@@ -287,6 +287,7 @@ sub command {
     } elsif ($command eq 'store') {
         check_args (3, 3, [3], @args);
         $server->store (@args) or failure ($server->error, @_);
+        splice (@_, 3);
     } else {
         error "unknown command $command";
     }
