@@ -255,7 +255,7 @@ for my $command (sort keys %commands) {
         ($out, $err) = run_backend ($command, @args);
         if ($command eq 'store' and $arg == 2) {
             is ($err, '', 'Store allows any characters');
-            is ($OUTPUT, "command $command @args from admin (1.2.3.4)"
+            is ($OUTPUT, "command $command @args[0,1] from admin (1.2.3.4)"
                 . " succeeded\n", ' and success logged');
             is ($out, "$new\nstore foobar foobar foo;bar\n",
                 ' and calls the right method');
@@ -327,7 +327,12 @@ for my $command (qw/autocreate create destroy setacl setattr store/) {
     my @extra = ('foo') x ($commands{$command}[0] - 2);
     my $extra = @extra ? join (' ', '', @extra) : '';
     ($out, $err) = run_backend ($command, 'type', 'name', @extra);
-    my $ran = "$command type name" . (@extra ? " @extra" : '');
+    my $ran;
+    if ($command eq 'store') {
+        $ran = "$command type name";
+    } else {
+        $ran = "$command type name" . (@extra ? " @extra" : '');
+    }
     is ($err, '', "Command $command ran with no errors");
     is ($OUTPUT, "command $ran from admin (1.2.3.4) succeeded\n",
         ' and success logged');
